--- a/code.html
+++ b/code.html
@@ -46,60 +46,13 @@
 	<!-- Main -->
 	<div id="main">
 
-		<!-- Publications -->
-		<section id="publications">
+		<!-- Welcome -->
+		<section id="welcome">
 			<header class="major">
-				<h1>Publications</h1>
+				<h2>Welcome!</h2>
 			</header>
-			<p>Contributions to peer-reviewed journals, peer-reviewed conference proceedings, recent preprints, and other publications.</p>
-
-			<ul class="actions fit">
-				<li><a href="#journals" class="button fit">Journals</a></li>
-				<li><a href="#conferences" class="button fit">Conferences</a></li>
-				<li><a href="#preprints" class="button fit">Preprints</a></li>
-				<li><a href="#other" class="button fit">Other</a></li>
-			</ul>
-		</section>
-
-		<section id="journals">
-			<header class="major">
-				<h2>Journals</h2>
-			</header>
-			<table id="tableJournals">
-				<tbody>
-				</tbody>
-			</table>
-		</section>
-
-		<section id="conferences">
-			<header class="major">
-				<h2>Conferences</h2>
-			</header>
-			<table id="tableConferences">
-				<tbody>
-				</tbody>
-			</table>
-		</section>
-
-		<section id="preprints">
-			<header class="major">
-				<h2>Preprints</h2>
-			</header>
-			<table id="tablePreprints">
-				<tbody>
-				</tbody>
-			</table>
-		</section>
-
-		<section id="other">
-			<header class="major">
-				<h2>Other</h2>
-			</header>
-
-			<table id="tableOther">
-				<tbody>
-				</tbody>
-			</table>
+			<p> I'm a postodoctoral fellow
+			</p>
 		</section>
 
 		<!-- Footer -->
@@ -134,18 +87,6 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<!-- Import all jsons of publications and build tables. -->
-		<script src="publications/journals.js"></script>
-		<script src="publications/conferences.js"></script>
-		<script src="publications/preprints.js"></script>
-		<script src="publications/other.js"></script>
-		<script src="assets/js/build-publication.js"></script>
-		<script type="text/javascript">
-			buildTable(pubJournals, "tableJournals");
-			// buildTable(pubConferences, "tableConferences");
-			// buildTable(pubPreprints, "tablePreprints");
-			// buildTable(pubOther, "tableOther");
-		</script>
 
 </body>
 
