--- a/students.html
+++ b/students.html
@@ -75,7 +75,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Design by <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
