--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 			<h1><strong>Lukas Schmid</strong>, PhD<br />
 				Postdoctoral Fellow <br>
 				@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a>
