--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
 <head>
 	<title>Lukas Schmid</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -23,13 +23,15 @@
 	<header id="header">
 		<div class="inner">
 			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-			<h1><strong>Lukas Schmid</strong>, PhD<br />
-				Postdoctoral Fellow <br>
-				@<a href="https://web.mit.edu/sparklab/" target="_blank">MIT-SPARK Lab</a>
+			<h1>
+				<ul class="no-bullets" style="padding-bottom: 2em;">
+					<li><strong>Lukas Schmid</strong>, PhD</li>
+					<li>Postdoctoral Fellow </li>
+					<li>@<a href="https://web.mit.edu/sparklab/" target="_blank">MIT-SPARK Lab</a></li>
+				</ul>
 			</h1>
 		</div>
 	</header>
-
 
 	<!-- Navigation -->
 	<nav id="nav">
