--- a/bio.html
+++ b/bio.html
@@ -7,7 +7,6 @@
 -->
 
 
-
 <html>
 
 <head>
@@ -15,6 +14,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+	<base target="_blank">
 </head>
 
 <body class="is-preload">
@@ -27,7 +27,7 @@
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" target="_blank">MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
@@ -53,31 +53,31 @@
 				<h1>Biography</h1>
 			</header>
 			<p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/"
-					target="_blank">MIT-SPARK</a> Lab lead by <a href="https://lucacarlone.mit.edu/" target="_blank">Prof. Luca
-					Carlone</a> at the <a href="https://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a>,
+					>MIT-SPARK</a> Lab lead by <a href="https://lucacarlone.mit.edu/" >Prof. Luca
+					Carlone</a> at the <a href="https://www.mit.edu/" >Massachusetts Institute of Technology</a>,
 				working on hierarchical scene understanding in complex and dynamic environments.
 			</p>
 
 			<p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/"
-					target="_blank">Autonomous Systems Lab (ASL)</a> lead by
+					>Autonomous Systems Lab (ASL)</a> lead by
 				<a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-					target="_blank">Prof. Roland Siegwart</a> at <a href="https://ethz.ch/en.html" target="_blank">ETH Zürich</a>.
+					>Prof. Roland Siegwart</a> at <a href="https://ethz.ch/en.html" >ETH Zürich</a>.
 				I obtained my PhD in 2022 from ETH Zürich,
 				working at ASL with <a
 					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-					target="_blank">Prof. Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/" target="_blank">Dr. Cesar
-					Cadena</a>, <a href="https://www.nietojuan.com/" target="_blank">Dr. Juan
+					>Prof. Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/" >Dr. Cesar
+					Cadena</a>, <a href="https://www.nietojuan.com/" >Dr. Juan
 					Nieto</a> and in collaboration with the <a
-					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/" target="_blank">Microsoft
-					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/" target="_blank">Prof. Marc
+					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/" >Microsoft
+					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/" >Prof. Marc
 					Pollefeys</a>.
 				Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
 				graduated with distinction and was awarded the <a
-					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html" target="_blank">Willi Studer
+					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html" >Willi Studer
 					Prize</a> for the best
 				graduate and the
 				<a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"
-					target="_blank">ETH Medal</a> for outstanding master theses.
+					>ETH Medal</a> for outstanding master theses.
 			</p>
 
 			<p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on active
@@ -97,17 +97,17 @@
 			<h1>Selected Awards</h1>
 			<ul>
 				<!-- class="emphasized"> -->
-				<li><a href="https://data.snf.ch/grants/grant/214489" target="_blank"><strong>Swiss National Science Foundation
+				<li><a href="https://data.snf.ch/grants/grant/214489" ><strong>Swiss National Science Foundation
 							Postdoc.Mobility Career
 							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing Environments
 					using 3D Dynamic Scene Graphs", 2022.</li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"
-						target="_blank"><strong>Willi Studer Prize</strong></a>, awarded by <a href="https://ethz.ch/en.html"
-						target="_blank">
+						><strong>Willi Studer Prize</strong></a>, awarded by <a href="https://ethz.ch/en.html"
+						>
 						ETH Zürich</a> for the best graduate in M.Sc. Robotics, Systems, and Control (RSC), 2020.</li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"
-						target="_blank"><strong>ETH Medal for Outstanding Master Theses</strong></a>, awarded by <a
-						href="https://ethz.ch/en.html" target="_blank">
+						><strong>ETH Medal for Outstanding Master Theses</strong></a>, awarded by <a
+						href="https://ethz.ch/en.html" >
 						ETH Zürich</a> for my thesis "Active Path Planning for 3D Reconstruction with UAVs", 2020.</li>
 		</section>
 
@@ -124,12 +124,12 @@
 				<li><strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>, presented at
 					the <i>Semantic Perception Reading Group</i>, Google Zürich, Switzerland, 2022.</li>
 				<li><a href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"
-						target="_blank"><strong>Robust Volumetric Mapping in Changing Environments</strong></a>, presented at the
+						><strong>Robust Volumetric Mapping in Changing Environments</strong></a>, presented at the
 					<i>Microsoft Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2022.
 				</li>
 				<li><a
 						href="https://www.microsoft.com/en-us/research/video/volumetric-mapping-for-long-term-robot-interaction-jrc-workshop-2021/"
-						target="_blank"><strong>Volumetric Mapping for Long-term Robot Interaction</strong></a>, presented at the
+						><strong>Volumetric Mapping for Long-term Robot Interaction</strong></a>, presented at the
 					<i>Microsoft Swiss Joint Research Center Workshop</i>, Virtual, 2021.
 				</li>
 				<li><strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the <i>Microsoft
@@ -141,24 +141,24 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github" target="_blank"><span
+					<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
 								class="label">Github</span></a>
 					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" target="_blank"
+					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
 							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" target="_blank"
+					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
 							class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145" target="_blank" class="icon brands fa-orcid"><span
+					<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
 								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" target="_blank"
+					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
 							class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
 					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Original Design by <a href="http://html5up.net" target="_blank">HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
