--- a/bio.html
+++ b/bio.html
@@ -22,12 +22,12 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
 					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/" >MIT-SPARK Lab</a></li>
+					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
 				</ul>
 			</h1>
 		</div>
@@ -36,11 +36,11 @@
 	<!-- Navigation -->
 	<nav id="nav">
 		<ul>
-			<li><a class="icon solid fa-home" href="index.html">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html">Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html">Student Projects</a></li>
-			<li><a class="icon solid fa-code" href="code.html">Open Source Code</a></li>
+			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
+			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
+			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
 
@@ -52,38 +52,42 @@
 			<header class="major">
 				<h1>Biography</h1>
 			</header>
-			<p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/"
-					>MIT-SPARK</a> Lab lead by <a href="https://lucacarlone.mit.edu/" >Prof. Luca
-					Carlone</a> at the <a href="https://www.mit.edu/" >Massachusetts Institute of Technology</a>,
+			<p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/">MIT-SPARK</a> Lab lead
+				by <a href="https://lucacarlone.mit.edu/">Prof. Luca
+					Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>,
 				working on hierarchical scene understanding in complex and dynamic environments.
 			</p>
 
-			<p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/"
-					>Autonomous Systems Lab (ASL)</a> lead by
-				<a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-					>Prof. Roland Siegwart</a> at <a href="https://ethz.ch/en.html" >ETH Zürich</a>.
+			<p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/">Autonomous
+					Systems Lab (ASL)</a> lead by
+				<a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+					Roland Siegwart</a> at <a href="https://ethz.ch/en.html">ETH Zürich</a>.
 				I obtained my PhD in 2022 from ETH Zürich,
 				working at ASL with <a
-					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html"
-					>Prof. Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/" >Dr. Cesar
-					Cadena</a>, <a href="https://www.nietojuan.com/" >Dr. Juan
+					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+					Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/">Dr. Cesar
+					Cadena</a>, <a href="https://www.nietojuan.com/">Dr. Juan
 					Nieto</a> and in collaboration with the <a
-					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/" >Microsoft
-					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/" >Prof. Marc
+					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
+					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
 					Pollefeys</a>.
 				Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
 				graduated with distinction and was awarded the <a
-					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html" >Willi Studer
+					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
 					Prize</a> for the best
 				graduate and the
-				<a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"
-					>ETH Medal</a> for outstanding master theses.
+				<a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
+					Medal</a> for outstanding master theses.
 			</p>
 
-			<p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on active
-				and passive perception and understanding of complex environments for robotic interaction and augmented reality.
-				This includes building dense geometric and semantic representations of an environment, scene abstraction and
-				understanding, lifelong learning and mapping, as well as active path planning to build these representations and
+			<p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
+				active
+				and passive perception and understanding of complex environments for robotic interaction and augmented
+				reality.
+				This includes building dense geometric and semantic representations of an environment, scene abstraction
+				and
+				understanding, lifelong learning and mapping, as well as active path planning to build these
+				representations and
 				abstractions autonomously and in unknown environments. </p>
 
 			<ul class="actions">
@@ -97,17 +101,18 @@
 			<h1>Selected Awards</h1>
 			<ul>
 				<!-- class="emphasized"> -->
-				<li><a href="https://data.snf.ch/grants/grant/214489" ><strong>Swiss National Science Foundation
+				<li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
 							Postdoc.Mobility Career
-							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing Environments
+							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing
+					Environments
 					using 3D Dynamic Scene Graphs", 2022.</li>
-				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"
-						><strong>Willi Studer Prize</strong></a>, awarded by <a href="https://ethz.ch/en.html"
-						>
+				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"><strong>Willi
+							Studer Prize</strong></a>, awarded by <a href="https://ethz.ch/en.html">
 						ETH Zürich</a> for the best graduate in M.Sc. Robotics, Systems, and Control (RSC), 2020.</li>
-				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"
-						><strong>ETH Medal for Outstanding Master Theses</strong></a>, awarded by <a
-						href="https://ethz.ch/en.html" >
+				<li><a
+						href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"><strong>ETH
+							Medal for Outstanding Master Theses</strong></a>, awarded by <a
+						href="https://ethz.ch/en.html">
 						ETH Zürich</a> for my thesis "Active Path Planning for 3D Reconstruction with UAVs", 2020.</li>
 		</section>
 
@@ -119,20 +124,25 @@
 			</p>
 
 			<ul>
-				<li><strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>, presented
-					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, United Kingdom, 2022.</li>
-				<li><strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>, presented at
+				<li><strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
+					presented
+					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, United Kingdom, 2022.
+				</li>
+				<li><strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>,
+					presented at
 					the <i>Semantic Perception Reading Group</i>, Google Zürich, Switzerland, 2022.</li>
-				<li><a href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"
-						><strong>Robust Volumetric Mapping in Changing Environments</strong></a>, presented at the
+				<li><a
+						href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"><strong>Robust
+							Volumetric Mapping in Changing Environments</strong></a>, presented at the
 					<i>Microsoft Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2022.
 				</li>
 				<li><a
-						href="https://www.microsoft.com/en-us/research/video/volumetric-mapping-for-long-term-robot-interaction-jrc-workshop-2021/"
-						><strong>Volumetric Mapping for Long-term Robot Interaction</strong></a>, presented at the
+						href="https://www.microsoft.com/en-us/research/video/volumetric-mapping-for-long-term-robot-interaction-jrc-workshop-2021/"><strong>Volumetric
+							Mapping for Long-term Robot Interaction</strong></a>, presented at the
 					<i>Microsoft Swiss Joint Research Center Workshop</i>, Virtual, 2021.
 				</li>
-				<li><strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the <i>Microsoft
+				<li><strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the
+					<i>Microsoft
 						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2020.</li>
 			</ul>
 		</section>
@@ -141,24 +151,25 @@
 		<footer id="footer">
 			<div class="inner">
 				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github" ><span
+					<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
 								class="label">Github</span></a>
 					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217" 
+					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217"
 							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ" 
+					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ"
 							class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145"  class="icon brands fa-orcid"><span
+					<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
 								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14" 
+					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
 							class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span
+								class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Lukas Schmid</li>
-					<li>Original Design by <a href="http://html5up.net" >HTML5 UP</a></li>
+					<li>Original Design by <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</footer>
