Fix download link

--- a/bio.html
+++ b/bio.html
@@ -91,7 +91,7 @@
 				abstractions autonomously and in unknown environments. </p>
 
 			<ul class="actions">
-				<li><a download="download/CV.pdf" class="button icon solid fa-download">Download Full CV (Updated
+				<li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf" class="button icon solid fa-download">Download Full CV (Updated
 						2/2023)</a></li>
 			</ul>
 		</section>
