--- a/bio.html
+++ b/bio.html
@@ -119,7 +119,7 @@
 		<!-- Invited Talks -->
 		<section id="talks">
 			<h1>Invited Talks</h1>
-			<p>If you would like me to give a talk on the presented research, please feel free to contact me
+			<p>If you would like me to give a talk on the presented research, please reach out
 				at <a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>! Selected previous talks:
 			</p>
 
