--- a/bio.html
+++ b/bio.html
@@ -91,7 +91,8 @@
 				abstractions autonomously and in unknown environments. </p>
 
 			<ul class="actions">
-				<li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf" class="button icon solid fa-download">Download Full CV (Updated
+				<li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf"
+						class="button icon solid fa-download">Download Full CV (Updated
 						2/2023)</a></li>
 			</ul>
 		</section>
@@ -124,6 +125,10 @@
 			</p>
 
 			<ul>
+				<li><strong>Semantics and Learning for Active Robot Perception in Dynamic Environments</strong>,
+					presented
+					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, USA, 2023.
+				</li>
 				<li><strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
 					presented
 					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, United Kingdom, 2022.
@@ -143,7 +148,8 @@
 				</li>
 				<li><strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the
 					<i>Microsoft
-						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2020.</li>
+						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2020.
+				</li>
 			</ul>
 		</section>
 
