--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
 	<!-- Header -->
 	<header id="header">
 		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.jpg" alt="" /></a>
+			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
 			<h1>
 				<ul class="no-bullets" style="padding-bottom: 2em;">
 					<li><strong>Lukas Schmid</strong>, PhD</li>
@@ -70,9 +70,11 @@
 					Nieto</a> and in collaboration with the <a
 					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
 					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
-					Pollefeys</a>.
+					Pollefeys</a>. For my thesis research I was awarded the <a
+					href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
+				for outstanding PhD Theses.
 				Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
-				graduated with distinction and was awarded the <a
+				graduated with distinction, and was awarded the <a
 					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
 					Prize</a> for the best
 				graduate and the
@@ -102,6 +104,10 @@
 			<h1>Selected Awards</h1>
 			<ul>
 				<!-- class="emphasized"> -->
+				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
+							Outstanding PhD Thesis</strong></a>, awarded by <a href="https://ethz.ch/en.html">
+						ETH Zürich</a> for the outstanding research of my thesis "Robust Active
+					Perception and Volumetric Mapping in Unknown Changing Environments", 2023</li>
 				<li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
 							Postdoc.Mobility Career
 							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing
@@ -112,9 +118,10 @@
 						ETH Zürich</a> for the best graduate in M.Sc. Robotics, Systems, and Control (RSC), 2020.</li>
 				<li><a
 						href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"><strong>ETH
-							Medal for Outstanding Master Theses</strong></a>, awarded by <a
+							Medal for Outstanding Master Thesis</strong></a>, awarded by <a
 						href="https://ethz.ch/en.html">
-						ETH Zürich</a> for my thesis "Active Path Planning for 3D Reconstruction with UAVs", 2020.</li>
+						ETH Zürich</a> for my thesis "Active Path Planning
+					for 3D Reconstruction with UAVs", 2020.</li>
 		</section>
 
 		<!-- Invited Talks -->
