Update everything a little

--- a/bio.html
+++ b/bio.html
@@ -39,7 +39,7 @@
 			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
 			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
 			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Student Projects</a></li>
+			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
 			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
 		</ul>
 	</nav>
@@ -132,17 +132,24 @@
 			</p>
 
 			<ul>
+				<li><strong>Khronos: From Volumetric Mapping to Spatio-Temporal Perception of Dynamic Scenes</strong>,
+					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI, USA, 2024.
+				</li>
+				<li><strong>Towards Fully Autonomous Actionable Perceptionof Shared Dynamic Scenes</strong>,
+					presented
+					at the <i>Amazon Consumer Robotics Symposium</i>, Amazon Lab126, Sunnyvale, CA, USA, 2024.
+				</li>
 				<li><strong>Semantics and Learning for Active Robot Perception in Dynamic Environments</strong>,
 					presented
-					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, USA, 2023.
+					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, Cambridge, MA, USA, 2023.
 				</li>
 				<li><strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
 					presented
-					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, United Kingdom, 2022.
+					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, Manchester, United Kingdom, 2022.
 				</li>
 				<li><strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>,
 					presented at
-					the <i>Semantic Perception Reading Group</i>, Google Zürich, Switzerland, 2022.</li>
+					the <i>Semantic Perception Reading Group</i>, Google Zürich, Zürich, Switzerland, 2022.</li>
 				<li><a
 						href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"><strong>Robust
 							Volumetric Mapping in Changing Environments</strong></a>, presented at the
