Add umich lecture

--- a/bio.html
+++ b/bio.html
@@ -141,7 +141,7 @@
 			</p>
 
 			<ul>
-				<li><strong>Khronos: From Volumetric Mapping to Spatio-Temporal Perception of Dynamic Scenes</strong>,
+				<li><a href='https://www.youtube.com/watch?v=aJ-9PzWERmk'><strong>Khronos: From Volumetric Mapping to Spatio-Temporal Perception of Dynamic Scenes</strong></a>,
 					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI, USA, 2024.
 				</li>
 				<li><strong>Towards Fully Autonomous Actionable Perceptionof Shared Dynamic Scenes</strong>,
