--- a/bio.html
+++ b/bio.html
@@ -112,7 +112,7 @@
 		<section id="awards">
 			<h1>Selected Awards</h1>
 			<ul>
-				<!-- class="emphasized"> -->
+				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>First Place in the 2024 Hilti SLAM challenge</strong></a>, on </li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
 							Outstanding PhD Thesis</strong></a>, awarded by <a href="https://ethz.ch/en.html">
 						ETH Zürich</a> for the outstanding research of my thesis "Robust Active
@@ -141,10 +141,14 @@
 			</p>
 
 			<ul>
+				<li><strong>Khronos: Towards Spatio-Temporal Perception of Dynamic Scenes</strong>,
+					presented
+					at the <i>Space Robotics Lab</i>, Tohoku University, Sendai, Miyagi, Japan, 2024.
+				</li>
 				<li><a href='https://www.youtube.com/watch?v=aJ-9PzWERmk'><strong>Khronos: From Volumetric Mapping to Spatio-Temporal Perception of Dynamic Scenes</strong></a>,
 					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI, USA, 2024.
 				</li>
-				<li><strong>Towards Fully Autonomous Actionable Perceptionof Shared Dynamic Scenes</strong>,
+				<li><strong>Towards Fully Autonomous Actionable Perception of Shared Dynamic Scenes</strong>,
 					presented
 					at the <i>Amazon Consumer Robotics Symposium</i>, Amazon Lab126, Sunnyvale, CA, USA, 2024.
 				</li>
