--- a/bio.html
+++ b/bio.html
@@ -141,6 +141,10 @@
 			</p>
 
 			<ul>
+				<li><strong>Khronos: Towards Autonomous Robotic Perception and Understanding of Dynamic Human Environments</strong>,
+					presented
+					at the <i>Robotics Systems Lab Seminar</i>, ETH, Zurich, Switzerland, 2024.
+				</li>
 				<li><strong>Khronos: Towards Spatio-Temporal Perception of Dynamic Scenes</strong>,
 					presented
 					at the <i>Space Robotics Lab</i>, Tohoku University, Sendai, Miyagi, Japan, 2024.
