--- a/bio.html
+++ b/bio.html
@@ -112,11 +112,13 @@
 		<section id="awards">
 			<h1>Selected Awards</h1>
 			<ul>
-				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>First Place in the 2024 Hilti SLAM challenge</strong></a>, on </li>
+				<li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First Place</strong></a> in the <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview"> "Nothing Stands Still" Hilti SLAM challenge </a> on spatio-temporal registration, 2024.
+				
+				</li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
 							Outstanding PhD Thesis</strong></a>, awarded by <a href="https://ethz.ch/en.html">
 						ETH Zürich</a> for the outstanding research of my thesis "Robust Active
-					Perception and Volumetric Mapping in Unknown Changing Environments", 2023</li>
+					Perception and Volumetric Mapping in Unknown Changing Environments", 2023.</li>
 				<li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
 							Postdoc.Mobility Career
 							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing
