--- a/bio.html
+++ b/bio.html
@@ -19,11 +19,11 @@
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	window.dataLayer = window.dataLayer || [];
+	function gtag() { dataLayer.push(arguments); }
+	gtag('js', new Date());
 
-  gtag('config', 'G-RKGKPT9DC6');
+	gtag('config', 'G-RKGKPT9DC6');
 </script>
 
 <body class="is-preload">
@@ -112,24 +112,28 @@
 		<section id="awards">
 			<h1>Selected Awards</h1>
 			<ul>
-				<li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First Place</strong></a> in the <a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview"> "Nothing Stands Still" Hilti SLAM challenge </a> on spatio-temporal registration, 2024.
-				
-				</li>
+				<li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
+						and Systems (RSS)</a> for our work on <a
+						href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
+				<li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First
+							Place</strong></a> in the <a
+						href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview"> "Nothing
+						Stands Still" 2024 Hilti SLAM challenge </a> on spatio-temporal registration, 2024.</li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
-							Outstanding PhD Thesis</strong></a>, awarded by <a href="https://ethz.ch/en.html">
+							Outstanding PhD Thesis</strong></a> awarded by <a href="https://ethz.ch/en.html">
 						ETH Zürich</a> for the outstanding research of my thesis "Robust Active
 					Perception and Volumetric Mapping in Unknown Changing Environments", 2023.</li>
 				<li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
-							Postdoc.Mobility Career
-							Grant</strong></a>, for the project "Robust Robotic Scene Understanding in Complex, Changing
+							Postdoc-Mobility Career
+							Grant</strong></a> for the project "Robust Robotic Scene Understanding in Complex, Changing
 					Environments
 					using 3D Dynamic Scene Graphs", 2022.</li>
 				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"><strong>Willi
-							Studer Prize</strong></a>, awarded by <a href="https://ethz.ch/en.html">
+							Studer Prize</strong></a> awarded by <a href="https://ethz.ch/en.html">
 						ETH Zürich</a> for the best graduate in M.Sc. Robotics, Systems, and Control (RSC), 2020.</li>
 				<li><a
 						href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"><strong>ETH
-							Medal for Outstanding Master Thesis</strong></a>, awarded by <a
+							Medal for Outstanding Master Thesis</strong></a> awarded by <a
 						href="https://ethz.ch/en.html">
 						ETH Zürich</a> for my thesis "Active Path Planning
 					for 3D Reconstruction with UAVs", 2020.</li>
@@ -142,46 +146,52 @@
 				at <a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>! Selected previous talks:
 			</p>
 
-			<ul>
-				<li><strong>Khronos: Towards Autonomous Robotic Perception and Understanding of Dynamic Human Environments</strong>,
+			<ul style="list-style-type: none; counter-reset: elementcounter; padding-left: 0;">
+				<li><a class='highlight'>7/2024</a> <strong>Active Perception and Long-term Understanding of Dynamic Human Environments
+					</strong>, presented at <i>INRIA de l'Université de Rennes</i>, Rennes, France. </li>
+				<li><a class='highlight'>6/2024</a> <strong>Khronos: Towards Autonomous Robotic Perception and Understanding of Dynamic Human
+						Environments</strong>,
 					presented
-					at the <i>Robotics Systems Lab Seminar</i>, ETH, Zurich, Switzerland, 2024.
+					at the <i>Robotics Systems Lab Seminar</i>, ETH, Zurich, Switzerland.
 				</li>
-				<li><strong>Khronos: Towards Spatio-Temporal Perception of Dynamic Scenes</strong>,
+				<li><a class='highlight'>5/2024</a> <strong>Khronos: Towards Spatio-Temporal Perception of Dynamic Scenes</strong>,
 					presented
-					at the <i>Space Robotics Lab</i>, Tohoku University, Sendai, Miyagi, Japan, 2024.
+					at the <i>Space Robotics Lab</i>, Tohoku University, Sendai, Miyagi, Japan.
 				</li>
-				<li><a href='https://www.youtube.com/watch?v=aJ-9PzWERmk'><strong>Khronos: From Volumetric Mapping to Spatio-Temporal Perception of Dynamic Scenes</strong></a>,
-					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI, USA, 2024.
+				<li><a class='highlight'>4/2024</a> <a href='https://www.youtube.com/watch?v=aJ-9PzWERmk'><strong>Khronos: From Volumetric Mapping to
+							Spatio-Temporal Perception of Dynamic Scenes</strong></a>,
+					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI,
+					USA.
 				</li>
-				<li><strong>Towards Fully Autonomous Actionable Perception of Shared Dynamic Scenes</strong>,
+				<li><a class='highlight'>3/2024</a> <strong>Towards Fully Autonomous Actionable Perception of Shared Dynamic Scenes</strong>,
 					presented
-					at the <i>Amazon Consumer Robotics Symposium</i>, Amazon Lab126, Sunnyvale, CA, USA, 2024.
+					at the <i>Amazon Consumer Robotics Symposium</i>, Amazon Lab126, Sunnyvale, CA, USA.
 				</li>
-				<li><strong>Semantics and Learning for Active Robot Perception in Dynamic Environments</strong>,
+				<li><a class='highlight'>10/2023</a> <strong>Semantics and Learning for Active Robot Perception in Dynamic Environments</strong>,
 					presented
-					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, Cambridge, MA, USA, 2023.
+					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, Cambridge, MA, USA.
 				</li>
-				<li><strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
+				<li><a class='highlight'>12/2022</a> <strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
 					presented
-					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, Manchester, United Kingdom, 2022.
+					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, Manchester, United
+					Kingdom.
 				</li>
-				<li><strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>,
+				<li><a class='highlight'>4/2022</a> <strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>,
 					presented at
-					the <i>Semantic Perception Reading Group</i>, Google Zürich, Zürich, Switzerland, 2022.</li>
-				<li><a
+					the <i>Semantic Perception Reading Group</i>, Google Zürich, Zürich, Switzerland.</li>
+				<li><a class='highlight'>3/2022</a> <a
 						href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"><strong>Robust
 							Volumetric Mapping in Changing Environments</strong></a>, presented at the
-					<i>Microsoft Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2022.
+					<i>Microsoft Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland.
 				</li>
-				<li><a
+				<li><a class='highlight'>4/2021</a> <a
 						href="https://www.microsoft.com/en-us/research/video/volumetric-mapping-for-long-term-robot-interaction-jrc-workshop-2021/"><strong>Volumetric
 							Mapping for Long-term Robot Interaction</strong></a>, presented at the
-					<i>Microsoft Swiss Joint Research Center Workshop</i>, Virtual, 2021.
+					<i>Microsoft Swiss Joint Research Center Workshop</i>, Virtual.
 				</li>
-				<li><strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the
+				<li><a class='highlight'>1/2020</a> <strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the
 					<i>Microsoft
-						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland, 2020.
+						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland.
 				</li>
 			</ul>
 		</section>
