--- a/bio.html
+++ b/bio.html
@@ -6,230 +6,145 @@
 	Adapted by Lukas Schmid
 -->
 
-
 <html>
 
 <head>
-	<title>Lukas Schmid</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<base target="_blank">
+  <title>Lukas Schmid</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, minimum-scale=1" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <base target="_blank">
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKGKPT9DC6"></script>
 <script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() { dataLayer.push(arguments); }
-	gtag('js', new Date());
-
-	gtag('config', 'G-RKGKPT9DC6');
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+  gtag('config', 'G-RKGKPT9DC6');
 </script>
 
 <body class="is-preload">
+  <header id="header"> </header>
+  <nav id="nav"></nav>
 
-	<!-- Header -->
-	<header id="header">
-		<div class="inner">
-			<a href="index.html" class="image avatar" target="_self"><img src="images/avatar.png" alt="" /></a>
-			<h1>
-				<ul class="no-bullets" style="padding-bottom: 2em;">
-					<li><strong>Lukas Schmid</strong>, PhD</li>
-					<li>Postdoctoral Fellow </li>
-					<li>@<a href="https://web.mit.edu/sparklab/">MIT-SPARK Lab</a></li>
-				</ul>
-			</h1>
-		</div>
-	</header>
+  <!-- Main -->
+  <div id="main">
 
-	<!-- Navigation -->
-	<nav id="nav">
-		<ul>
-			<li><a class="icon solid fa-home" href="index.html" target="_self">Homepage</a></li>
-			<li><a class="icon solid fa-user" href="bio.html" target="_self">Biography</a></li>
-			<li><a class="icon solid fa-graduation-cap" href="publications.html" target="_self"> Publications</a></li>
-			<li><a class="icon solid fa-university" href="students.html" target="_self">Teaching</a></li>
-			<li><a class="icon solid fa-code" href="code.html" target="_self">Open Source Code</a></li>
-		</ul>
-	</nav>
+    <!-- Welcome -->
+    <section id="welcome">
+      <header class="major">
+        <h1>Biography</h1>
+      </header>
+      <p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/">MIT-SPARK</a> Lab lead
+        by <a href="https://lucacarlone.mit.edu/">Prof. Luca
+          Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>,
+        working on hierarchical scene understanding in complex and dynamic environments.
+      </p>
 
-	<!-- Main -->
-	<div id="main">
+      <p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/">Autonomous
+          Systems Lab (ASL)</a> lead by
+        <a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+          Roland Siegwart</a> at <a href="https://ethz.ch/en.html">ETH Zürich</a>.
+        I obtained my PhD in 2022 from ETH Zürich,
+        working at ASL with <a
+          href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
+          Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/">Dr. Cesar
+          Cadena</a>, <a href="https://www.nietojuan.com/">Dr. Juan
+          Nieto</a> and in collaboration with the <a
+          href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
+          Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
+          Pollefeys</a>. For my thesis research I was awarded the <a
+          href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
+        for outstanding PhD Theses.
+        Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
+        graduated with distinction, and was awarded the <a
+          href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
+          Prize</a> for the best
+        graduate and the
+        <a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
+          Medal</a> for outstanding master theses.
+      </p>
 
-		<!-- Welcome -->
-		<section id="welcome">
-			<header class="major">
-				<h1>Biography</h1>
-			</header>
-			<p>I'm currently a postdoctoral fellow at the <a href="https://web.mit.edu/sparklab/">MIT-SPARK</a> Lab lead
-				by <a href="https://lucacarlone.mit.edu/">Prof. Luca
-					Carlone</a> at the <a href="https://www.mit.edu/">Massachusetts Institute of Technology</a>,
-				working on hierarchical scene understanding in complex and dynamic environments.
-			</p>
+      <p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
+        active
+        and passive perception and understanding of complex environments for robotic interaction and augmented
+        reality.
+        This includes building dense geometric and semantic representations of an environment, scene abstraction
+        and
+        understanding, lifelong learning and mapping, as well as active path planning to build these
+        representations and
+        abstractions autonomously and in unknown environments. </p>
 
-			<p>Before that, I briefly was a postdoctoral researcher at the <a href="https://asl.ethz.ch/">Autonomous
-					Systems Lab (ASL)</a> lead by
-				<a href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-					Roland Siegwart</a> at <a href="https://ethz.ch/en.html">ETH Zürich</a>.
-				I obtained my PhD in 2022 from ETH Zürich,
-				working at ASL with <a
-					href="https://asl.ethz.ch/the-lab/people/person-detail.Mjk5ODE=.TGlzdC8yMDI4LDEyMDExMzk5Mjg=.html">Prof.
-					Roland Siegwart</a>, <a href="https://n.ethz.ch/~cesarc/">Dr. Cesar
-					Cadena</a>, <a href="https://www.nietojuan.com/">Dr. Juan
-					Nieto</a> and in collaboration with the <a
-					href="https://www.microsoft.com/en-us/research/lab/mixed-reality-ai-zurich/">Microsoft
-					Mixed Reality and AI Lab</a> lead by <a href="https://people.inf.ethz.ch/pomarc/">Prof. Marc
-					Pollefeys</a>. For my thesis research I was awarded the <a
-					href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html">ETH Medal</a>
-				for outstanding PhD Theses.
-				Before that, I obtained my M.Sc. in Robotics, Systems, and Control (RSC) in 2019 also from ETH, which I
-				graduated with distinction, and was awarded the <a
-					href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html">Willi Studer
-					Prize</a> for the best
-				graduate and the
-				<a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html">ETH
-					Medal</a> for outstanding master theses.
-			</p>
+      <ul class="actions">
+        <li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf" class="button icon solid fa-download">Download Full
+            CV (Updated
+            7/2024)</a></li>
+      </ul>
+    </section>
 
-			<p> My main research interests lie in autonomy for intelligent mobile systems. In particular, I focus on
-				active
-				and passive perception and understanding of complex environments for robotic interaction and augmented
-				reality.
-				This includes building dense geometric and semantic representations of an environment, scene abstraction
-				and
-				understanding, lifelong learning and mapping, as well as active path planning to build these
-				representations and
-				abstractions autonomously and in unknown environments. </p>
+    <!-- Awards -->
+    <section id="awards">
+      <h1>Awards</h1>
+      <ul>
+        <li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
+            and Systems (RSS)</a> for our work on <a href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
+        <li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First
+              Place</strong></a> in the <a
+            href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview"> "Nothing
+            Stands Still" 2024 Hilti SLAM challenge </a> on spatio-temporal registration, 2024.</li>
+        <li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
+              Outstanding PhD Thesis</strong></a> awarded by <a href="https://ethz.ch/en.html">
+            ETH Zürich</a> for the outstanding research of my thesis "<a
+            href="https://www.research-collection.ethz.ch/handle/20.500.11850/583169">Robust Active
+            Perception and Volumetric Mapping in Unknown Changing Environments</a>", 2023.</li>
+        <li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
+              Postdoc-Mobility Career
+              Grant</strong></a> for the project "<a href="https://data.snf.ch/grants/grant/214489">Robust
+            Robotic Scene Understanding in Complex, Changing
+            Environments
+            using 3D Dynamic Scene Graphs</a>", 2022.</li>
+        <li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"><strong>Willi
+              Studer Prize</strong></a> awarded by <a href="https://ethz.ch/en.html">
+            ETH Zürich</a> for the best M.Sc. graduate, 2020.</li>
+        <li><a
+            href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"><strong>ETH
+              Medal for Outstanding Master Thesis</strong></a> awarded by <a href="https://ethz.ch/en.html">
+            ETH Zürich</a> for my thesis "<a
+            href="https://www.research-collection.ethz.ch/handle/20.500.11850/506422">Active Path Planning
+            for 3D Reconstruction with UAVs</a>", 2020.</li>
+    </section>
 
-			<ul class="actions">
-				<li><a href="download/CV.pdf" download="CV_LukasSchmid.pdf"
-						class="button icon solid fa-download">Download Full CV (Updated
-						7/2024)</a></li>
-			</ul>
-		</section>
+    <!-- Invited Talks -->
+    <section id="talks">
+      <h1>Invited Talks</h1>
+      <p>If you would like me to give a talk please reach out
+        to <a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>! Selected previous talks:
+      </p>
 
-		<!-- Awards -->
-		<section id="awards">
-			<h1>Selected Awards</h1>
-			<ul>
-				<li><strong>Best Paper Award</strong> at <a href="https://roboticsconference.org/"> Robotics: Science
-						and Systems (RSS)</a> for our work on <a
-						href="https://github.com/MIT-SPARK/Khronos">Khronos</a>, 2024.</li>
-				<li><a href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/leaderboard/18"><strong>First
-							Place</strong></a> in the <a
-						href="https://eval.nothing-stands-still.com/web/challenges/challenge-page/9/overview"> "Nothing
-						Stands Still" 2024 Hilti SLAM challenge </a> on spatio-temporal registration, 2024.</li>
-				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal.html"><strong>ETH Medal for
-							Outstanding PhD Thesis</strong></a> awarded by <a href="https://ethz.ch/en.html">
-						ETH Zürich</a> for the outstanding research of my thesis "Robust Active
-					Perception and Volumetric Mapping in Unknown Changing Environments", 2023.</li>
-				<li><a href="https://data.snf.ch/grants/grant/214489"><strong>Swiss National Science Foundation
-							Postdoc-Mobility Career
-							Grant</strong></a> for the project "Robust Robotic Scene Understanding in Complex, Changing
-					Environments
-					using 3D Dynamic Scene Graphs", 2022.</li>
-				<li><a href="https://ethz.ch/en/the-eth-zurich/education/awards/willi-studer-prize.html"><strong>Willi
-							Studer Prize</strong></a> awarded by <a href="https://ethz.ch/en.html">
-						ETH Zürich</a> for the best graduate in M.Sc. Robotics, Systems, and Control (RSC), 2020.</li>
-				<li><a
-						href="https://ethz.ch/en/the-eth-zurich/education/awards/eth-medal/outstanding-master-theses.html"><strong>ETH
-							Medal for Outstanding Master Thesis</strong></a> awarded by <a
-						href="https://ethz.ch/en.html">
-						ETH Zürich</a> for my thesis "Active Path Planning
-					for 3D Reconstruction with UAVs", 2020.</li>
-		</section>
+      <ul style="list-style-type: none; counter-reset: elementcounter; padding-left: 0;" id="listTalks"></ul>
+    </section>
 
-		<!-- Invited Talks -->
-		<section id="talks">
-			<h1>Invited Talks</h1>
-			<p>If you would like me to give a talk on the presented research, please reach out
-				at <a href="mailto:lschmid@mit.edu">lschmid@mit.edu</a>! Selected previous talks:
-			</p>
+    <!-- Footer -->
+    <footer id="footer"> </footer>
 
-			<ul style="list-style-type: none; counter-reset: elementcounter; padding-left: 0;">
-				<li><a class='highlight'>7/2024</a> <strong>Active Perception and Long-term Understanding of Dynamic Human Environments
-					</strong>, presented at <i>INRIA de l'Université de Rennes</i>, Rennes, France. </li>
-				<li><a class='highlight'>6/2024</a> <strong>Khronos: Towards Autonomous Robotic Perception and Understanding of Dynamic Human
-						Environments</strong>,
-					presented
-					at the <i>Robotics Systems Lab Seminar</i>, ETH, Zurich, Switzerland.
-				</li>
-				<li><a class='highlight'>5/2024</a> <strong>Khronos: Towards Spatio-Temporal Perception of Dynamic Scenes</strong>,
-					presented
-					at the <i>Space Robotics Lab</i>, Tohoku University, Sendai, Miyagi, Japan.
-				</li>
-				<li><a class='highlight'>4/2024</a> <a href='https://www.youtube.com/watch?v=aJ-9PzWERmk'><strong>Khronos: From Volumetric Mapping to
-							Spatio-Temporal Perception of Dynamic Scenes</strong></a>,
-					presented at <i>Mobile Robotics: Methods and Algorithms</i>, University of Michigan, Ann Arbor, MI,
-					USA.
-				</li>
-				<li><a class='highlight'>3/2024</a> <strong>Towards Fully Autonomous Actionable Perception of Shared Dynamic Scenes</strong>,
-					presented
-					at the <i>Amazon Consumer Robotics Symposium</i>, Amazon Lab126, Sunnyvale, CA, USA.
-				</li>
-				<li><a class='highlight'>10/2023</a> <strong>Semantics and Learning for Active Robot Perception in Dynamic Environments</strong>,
-					presented
-					at the <i>MIT Machine Learning Tea-talk Series</i>, MIT, Cambridge, MA, USA.
-				</li>
-				<li><a class='highlight'>12/2022</a> <strong>Robust Active Perception and Volumetric Mapping in Unknown Changing Environments</strong>,
-					presented
-					at the <i>Joint Control and Robotics Seminar</i>, University of Manchester, Manchester, United
-					Kingdom.
-				</li>
-				<li><a class='highlight'>4/2022</a> <strong>Semantics and Learning for Robust Active Perception in Changing Environments</strong>,
-					presented at
-					the <i>Semantic Perception Reading Group</i>, Google Zürich, Zürich, Switzerland.</li>
-				<li><a class='highlight'>3/2022</a> <a
-						href="https://www.microsoft.com/en-us/research/video/robust-volumetric-mapping-in-changing-environments/"><strong>Robust
-							Volumetric Mapping in Changing Environments</strong></a>, presented at the
-					<i>Microsoft Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland.
-				</li>
-				<li><a class='highlight'>4/2021</a> <a
-						href="https://www.microsoft.com/en-us/research/video/volumetric-mapping-for-long-term-robot-interaction-jrc-workshop-2021/"><strong>Volumetric
-							Mapping for Long-term Robot Interaction</strong></a>, presented at the
-					<i>Microsoft Swiss Joint Research Center Workshop</i>, Virtual.
-				</li>
-				<li><a class='highlight'>1/2020</a> <strong>A Modular Approach for Lifelong Mapping from End-User Data</strong>, presented at the
-					<i>Microsoft
-						Swiss Joint Research Center Workshop</i>, Lausanne, Switzerland.
-				</li>
-			</ul>
-		</section>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<div class="inner">
-				<ul class="icons">
-					<li><a href="https://github.com/Schmluk" class="icon brands fa-github"><span
-								class="label">Github</span></a>
-					</li>
-					<li><a href="https://www.linkedin.com/in/lukas-schmid-599872217"
-							class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-					<li><a href="https://scholar.google.com/citations?user=kv4Ybd8AAAAJ"
-							class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://orcid.org/0000-0002-3961-8145" class="icon brands fa-orcid"><span
-								class="label">ORCID</span></a></li>
-					<li><a href="https://www.researchgate.net/profile/Lukas-Schmid-14"
-							class="icon brands fa-researchgate"><span class="label">Research Gate</span></a></li>
-					<li><a href="mailto:lschmid@mit.edu" class="icon solid fa-envelope"><span
-								class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Lukas Schmid</li>
-					<li>Based on Designs by <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</footer>
+    <!-- Import the json of talks and build the list. -->
+    <script src="publications/talks.js"></script>
+    <script src="assets/js/build-talks.js"></script>
+    <script type="text/javascript">
+      buildTalks(pubTalks, "listTalks");
+    </script>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.poptrox.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+    <script src="assets/js/build-header-footer.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
